force-app/main/default/objects/Lead/fields/Ag_ncia__c.field-meta.xml
<CustomField>
    <fullName>Ag_ncia__c</fullName>
    <description>Cite a agência responsável pelo desenvolvimento do site.</description>
    <label>Agency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>