force-app/main/default/objects/Lead/fields/AutocompleteCEPauxiliar__c.field-meta.xml
<CustomField>
    <fullName>AutocompleteCEPauxiliar__c</fullName>
    <formula>IF (ISPICKVAL(TemAutocompleteCEP__c  , &apos;Sim&apos;), 0, 3 )</formula>
    <label>Autocomplete de CEP (auxiliar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>