force-app/main/default/objects/Lead/fields/Automatic_Pix__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Pix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Pix</label>
    <type>Checkbox</type>
</CustomField>