force-app/main/default/objects/Lead/fields/AverageSalesTicket__c.field-meta.xml
<CustomField>
    <fullName>AverageSalesTicket__c</fullName>
    <inlineHelpText>Antigo &quot;Ticket Médio&quot;</inlineHelpText>
    <label>Average Order Value</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>