force-app/main/default/objects/Lead/fields/Boleto_Share__c.field-meta.xml
<CustomField>
    <fullName>Boleto_Share__c</fullName>
    <label>Boleto (% monthly share)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>