force-app/main/default/objects/Lead/fields/Business_Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Model_Type__c</fullName>
    <label>Business Model Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Business_Model_Type</valueSetName>
    </valueSet>
</CustomField>