force-app/main/default/objects/Lead/fields/CampanhaNutricao__c.field-meta.xml
<CustomField>
    <fullName>CampanhaNutricao__c</fullName>
    <label>Campanha de nutrição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>