force-app/main/default/objects/Lead/fields/Cartao_Debito_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Cartao_Debito_Mensal__c</fullName>
    <label>Debit Card (% monthly share)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>