force-app/main/default/objects/Lead/fields/Categoria_de_Produto__c.field-meta.xml
<CustomField>
    <fullName>Categoria_de_Produto__c</fullName>
    <label>Categoria de Produto</label>
    <length>128</length>
    <type>Text</type>
</CustomField>