force-app/main/default/objects/Lead/fields/cf_email_indicador__c.field-meta.xml
<CustomField>
    <fullName>cf_email_indicador__c</fullName>
    <label>Indicator Email</label>
    <type>TextArea</type>
</CustomField>