force-app/main/default/objects/Lead/fields/cf_totvs_cargo_indicador__c.field-meta.xml
<CustomField>
    <fullName>cf_totvs_cargo_indicador__c</fullName>
    <label>Cargo do indicador (TOTVS)</label>
    <type>TextArea</type>
</CustomField>