force-app/main/default/objects/Lead/fields/cf_totvs_unidade__c.field-meta.xml
<CustomField>
    <fullName>cf_totvs_unidade__c</fullName>
    <label>Unidade (TOTVS)</label>
    <type>TextArea</type>
</CustomField>