force-app/main/default/objects/Lead/fields/CheckoutTransparente__c.field-meta.xml
<CustomField>
    <fullName>CheckoutTransparente__c</fullName>
    <label>Checkout é transparente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Checkout inacessível</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>