force-app/main/default/objects/Lead/fields/CheckoutTransparenteAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>CheckoutTransparenteAuxiliar__c</fullName>
    <formula>IF (ISPICKVAL(CheckoutTransparente__c , &apos;Sim&apos;), 0, 
				IF(ISPICKVAL(CheckoutTransparente__c, &apos;Checkout inacessível&apos;), 0, 3) )</formula>
    <label>Checkout transparente (auxiliar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>