force-app/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Billing City</label>
    <type>TextArea</type>
</CustomField>