force-app/main/default/objects/Lead/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <label>Contact City</label>
    <type>TextArea</type>
</CustomField>