force-app/main/default/objects/Lead/fields/Conversion_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Time_Days__c</fullName>
    <formula>IF(
    IsConverted,
    ConvertedDate - DATEVALUE(CreatedDate),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>