force-app/main/default/objects/Lead/fields/Data_de_indicacao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_indicacao__c</fullName>
    <description>Data da indicação do lead</description>
    <inlineHelpText>Data da indicação do lead</inlineHelpText>
    <label>Data de indicação</label>
    <type>Date</type>
</CustomField>