force-app/main/default/objects/Lead/fields/DataAgendamento__c.field-meta.xml
<CustomField>
    <fullName>DataAgendamento__c</fullName>
    <label>Discovery Meeting Date</label>
    <type>Date</type>
</CustomField>