force-app/main/default/objects/Lead/fields/Descricao_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Descricao_Empresa__c</fullName>
    <label>Detailed Product/Service Description</label>
    <type>TextArea</type>
</CustomField>