force-app/main/default/objects/Lead/fields/Desired_Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Desired_Business_Model__c</fullName>
    <label>Desired Business Model</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intermediation</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Pix International</fullName>
            </value>
            <value>
                <fullName>Pix Roaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>