force-app/main/default/objects/Lead/fields/Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Enterprise__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Registro é da nossa vertical de Enterprise?</inlineHelpText>
    <label>Enterprise</label>
    <type>Checkbox</type>
</CustomField>