force-app/main/default/objects/Lead/fields/Expected_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Expected_Account_Type__c</fullName>
    <formula>CASE(
    RecordType.Name,
    &quot;National&quot;, &quot;Nacional (NB)&quot;,
    &quot;Cross-border&quot;, &quot;Cross Border (XB)&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Account Type</label>
    <type>Text</type>
</CustomField>