force-app/main/default/objects/Lead/fields/Hubspot_Life_Cycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Life_Cycle_Stage__c</fullName>
    <label>Hubspot Life Cycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>subscriber</fullName>
                <label>Assinante</label>
            </value>
            <value>
                <fullName>lead</fullName>
                <label>Lead</label>
            </value>
            <value>
                <fullName>marketingqualifiedlead</fullName>
                <label>Lead qualificado para marketing</label>
            </value>
            <value>
                <fullName>salesqualifiedlead</fullName>
                <label>Lead qualificado para venda</label>
            </value>
            <value>
                <fullName>opportunity</fullName>
                <label>Oportunidade</label>
            </value>
            <value>
                <fullName>customer</fullName>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>evangelist</fullName>
                <label>Promotor</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Outro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>