force-app/main/default/objects/Lead/fields/Integracao__c.field-meta.xml
<CustomField>
    <fullName>Integracao__c</fullName>
    <label>Current Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PlataformaUtilizada</valueSetName>
    </valueSet>
</CustomField>