force-app/main/default/objects/Lead/fields/Lead_Area__c.field-meta.xml
<CustomField>
    <fullName>Lead_Area__c</fullName>
    <label>Sector (lead)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Area</valueSetName>
    </valueSet>
</CustomField>