force-app/main/default/objects/Lead/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <label>Company LinkedIn</label>
    <type>Url</type>
</CustomField>