force-app/main/default/objects/Lead/fields/LinkedInContato__c.field-meta.xml
<CustomField>
    <fullName>LinkedInContato__c</fullName>
    <label>Contact LinkedIn</label>
    <type>Url</type>
</CustomField>