force-app/main/default/objects/Lead/fields/LinkedInEmpresaAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>LinkedInEmpresaAuxiliar__c</fullName>
    <formula>IF (ISBLANK(LinkedIn__c) , 0, 1)</formula>
    <label>LinkedIn da empresa (auxiliar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>