force-app/main/default/objects/Lead/fields/Metodos_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Metodos_Pagamento__c</fullName>
    <label>Métodos de Pagamento a Utilizar</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MetodosPagamentoUtilizar</valueSetName>
    </valueSet>
</CustomField>