force-app/main/default/objects/Lead/fields/MetodosPagamentoAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>MetodosPagamentoAuxiliar__c</fullName>
    <formula>IF(PICKLISTCOUNT(Metodos_Pagamento__c) == 1, 3, 
IF (PICKLISTCOUNT (Metodos_Pagamento__c) == 2, 2,
IF(PICKLISTCOUNT (Metodos_Pagamento__c) == 3, 1, 
IF  (PICKLISTCOUNT (Metodos_Pagamento__c) == 4, 1, 0 )
					)
						))</formula>
    <label>Métodos de pagamento (auxiliar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>