force-app/main/default/objects/Lead/fields/Monthly_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Transactions__c</fullName>
    <formula>previs_fat_rs__c  /   AverageSalesTicket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Monthly Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>