force-app/main/default/objects/Lead/fields/nb_receita_mensal__c.field-meta.xml
<CustomField>
    <fullName>nb_receita_mensal__c</fullName>
    <description>Faixa de faturamento mensal das oportunidades nacionais, em R$.</description>
    <inlineHelpText>Faixa de faturamento mensal das oportunidades nacionais, em R$.</inlineHelpText>
    <label>Receita mensal NB</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estamos iniciando no e-commerce</fullName>
            </value>
            <value>
                <fullName>Até R$50 mil</fullName>
            </value>
            <value>
                <fullName>R$50 mil até R$100 mil</fullName>
            </value>
            <value>
                <fullName>R$100 mil até R$200 mil</fullName>
            </value>
            <value>
                <fullName>R$200 mil até R$500 mil</fullName>
            </value>
            <value>
                <fullName>R$500 mil até R$1 milhão</fullName>
            </value>
            <value>
                <fullName>R$1 milhão até R$10 milhões</fullName>
            </value>
            <value>
                <fullName>Acima de R$10 milhões</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>