force-app/main/default/objects/Lead/fields/NotaReclameAqui__c.field-meta.xml
<CustomField>
    <fullName>NotaReclameAqui__c</fullName>
    <label>Note &quot;Reclame Aqui&quot;</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>