force-app/main/default/objects/Lead/fields/NotaReclameAquiAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>NotaReclameAquiAuxiliar__c</fullName>
    <formula>IF  (NotaReclameAqui__c &gt;=0 &amp;&amp; NotaReclameAqui__c &lt;=5, 1, 
				IF (NotaReclameAqui__c &gt;=5 &amp;&amp; NotaReclameAqui__c &lt;=7, 2, 
						 IF (NotaReclameAqui__c &gt;=7 &amp;&amp; NotaReclameAqui__c &lt;=10, 3, 0)
			 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nota Reclame Aqui (auxiliar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>