force-app/main/default/objects/Lead/fields/Operacao__c.field-meta.xml
<CustomField>
    <fullName>Operacao__c</fullName>
    <label>Operação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>