force-app/main/default/objects/Lead/fields/Payment_Method_Share__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Share__c</fullName>
    <label>Share de método de pagamento</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>