force-app/main/default/objects/Lead/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <label>Payment Methods</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pix</fullName>
            </value>
            <value>
                <fullName>Cartão de Crédito</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>Débito Flash</fullName>
                <label>Flash Debit</label>
            </value>
            <value>
                <fullName>Boleto Flash</fullName>
                <label>Flash Slip</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>