force-app/main/default/objects/Lead/fields/PIXmanualOuQRCode__c.field-meta.xml
<CustomField>
    <fullName>PIXmanualOuQRCode__c</fullName>
    <label>PIX é manual ou QRCode?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>QRCode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>