force-app/main/default/objects/Lead/fields/PIXmanualOuQRCodeAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>PIXmanualOuQRCodeAuxiliar__c</fullName>
    <formula>IF (ISPICKVAL(PIXmanualOuQRCode__c  , &apos;Manual&apos;), 2, 1 )</formula>
    <label>PIX Manual ou QRCode (auxiliar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>