force-app/main/default/objects/Lead/fields/PixMensal__c.field-meta.xml
<CustomField>
    <fullName>PixMensal__c</fullName>
    <label>Pix (% monthly share)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>