force-app/main/default/objects/Lead/fields/Possui_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Possui_CNPJ__c</fullName>
    <label>Possui CNPJ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>