force-app/main/default/objects/Lead/fields/previs_fat_rs__c.field-meta.xml
<CustomField>
    <fullName>previs_fat_rs__c</fullName>
    <inlineHelpText>Total processed volume expected via PagBrasil</inlineHelpText>
    <label>TPV PagBrasil</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>