force-app/main/default/objects/Lead/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5122</fullName>
                <label>Drugstores</label>
            </value>
            <value>
                <fullName>5300</fullName>
                <label>Wholesale Clubs</label>
            </value>
            <value>
                <fullName>5331</fullName>
                <label>Variety Stores</label>
            </value>
            <value>
                <fullName>5499</fullName>
                <label>Grocery Stores and Supermarkets</label>
            </value>
            <value>
                <fullName>5651</fullName>
                <label>Clothing</label>
            </value>
            <value>
                <fullName>5732</fullName>
                <label>Electronics Stores</label>
            </value>
            <value>
                <fullName>5734</fullName>
                <label>Computer Software</label>
            </value>
            <value>
                <fullName>5921</fullName>
                <label>Beer, Wine, Liquor Stores</label>
            </value>
            <value>
                <fullName>5977</fullName>
                <label>Cosmetic Stores</label>
            </value>
            <value>
                <fullName>8299</fullName>
                <label>Schools and Educational Services</label>
            </value>
            <value>
                <fullName>8999</fullName>
                <label>Professional Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>