force-app/main/default/objects/Lead/fields/Product_or_service_website_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_or_service_website_URL__c</fullName>
    <description>Website where the product or service will be sold. Same as KYC.</description>
    <inlineHelpText>Website where the product or service will be sold. Same as KYC.</inlineHelpText>
    <label>Product or service website URL</label>
    <type>Url</type>
</CustomField>