force-app/main/default/objects/Lead/fields/PSP__c.field-meta.xml
<CustomField>
    <fullName>PSP__c</fullName>
    <description>Qual é a processadora atual deste lead?</description>
    <label>PSP</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>