force-app/main/default/objects/Lead/fields/QualificacaoLead__c.field-meta.xml
<CustomField>
    <fullName>QualificacaoLead__c</fullName>
    <formula>NotaReclameAquiAuxiliar__c +  SeguidoresInstagramAuxiliar__c + 
	LinkedInEmpresaAuxiliar__c +  CheckoutTransparenteAuxiliar__c + 
	MetodosPagamentoAuxiliar__c +  ValidadeCPFauxiliar__c +
	 AutocompleteCEPauxiliar__c +  PIXmanualOuQRCodeAuxiliar__c</formula>
    <label>Qualificação do Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>