force-app/main/default/objects/Lead/fields/QualificacaoLeadIndicacao__c.field-meta.xml
<CustomField>
    <fullName>QualificacaoLeadIndicacao__c</fullName>
    <formula>IF (AND(QualificacaoLead__c  &gt;= 0 , QualificacaoLead__c &lt;= 3), &apos;Frio&apos;,
								IF (AND(QualificacaoLead__c  &gt;= 4  , QualificacaoLead__c &lt;= 12), &apos;Morno&apos;,
											IF (AND(QualificacaoLead__c  &gt;= 13 , QualificacaoLead__c &lt;= 19), &apos;Quente&apos;, &apos;&apos;) 
									)
						)</formula>
    <label>Qualificação do Lead</label>
    <type>Text</type>
</CustomField>