force-app/main/default/objects/Lead/fields/Qualificador__c.field-meta.xml
<CustomField>
    <fullName>Qualificador__c</fullName>
    <label>Qualificador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Qualificador</valueSetName>
    </valueSet>
</CustomField>