force-app/main/default/objects/Lead/fields/Receita_Global__c.field-meta.xml
<CustomField>
    <fullName>Receita_Global__c</fullName>
    <inlineHelpText>Receita total da empresa em outros países</inlineHelpText>
    <label>Receita Global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acima de 100M</fullName>
            </value>
            <value>
                <fullName>R$10M - R$100M</fullName>
            </value>
            <value>
                <fullName>R$1M - R$10M</fullName>
            </value>
            <value>
                <fullName>Até R$1M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>