force-app/main/default/objects/Lead/fields/Receita_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Receita_Mensal__c</fullName>
    <label>Receita Mensal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Receita_Mensal</valueSetName>
    </valueSet>
</CustomField>