force-app/main/default/objects/Lead/fields/Receita_Mensal_Cross_Border__c.field-meta.xml
<CustomField>
    <fullName>Receita_Mensal_Cross_Border__c</fullName>
    <description>Campo criado para atender o formulário cross-border, onde o cliente tem mais de uma opção de moeda para informar a receita mensal.</description>
    <label>Receita Mensal Cross-Border</label>
    <type>TextArea</type>
</CustomField>