force-app/main/default/objects/Lead/fields/Recorrencia__c.field-meta.xml
<CustomField>
    <fullName>Recorrencia__c</fullName>
    <label>Recorrência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
                <isActive>false</isActive>
                <label>Não</label>
            </value>
            <value>
                <fullName>Sim</fullName>
                <isActive>false</isActive>
                <label>Sim</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>