force-app/main/default/objects/Lead/fields/Recurring_Payments__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payments__c</fullName>
    <description>Já trabalha com recorrência de pagamentos?</description>
    <inlineHelpText>Antigo &quot;Recorrência&quot;</inlineHelpText>
    <label>Recurring Payments?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Não</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>