force-app/main/default/objects/Lead/fields/Revenue_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Forecast__c</fullName>
    <label>Revenue Forecast</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>