force-app/main/default/objects/Lead/fields/Sede_da_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Sede_da_Empresa__c</fullName>
    <label>Sede da Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>