force-app/main/default/objects/Lead/fields/Segmento_Outros__c.field-meta.xml
<CustomField>
    <fullName>Segmento_Outros__c</fullName>
    <description>Preenchimento do campo aberto do formulário quando o lead selecionou &quot;outros&quot; no segmento.</description>
    <inlineHelpText>Campo aberto &quot;outros&quot; formulário NB.</inlineHelpText>
    <label>Segmento Detalhe Outros NB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>