force-app/main/default/objects/Lead/fields/SeguidoresInstagram__c.field-meta.xml
<CustomField>
    <fullName>SeguidoresInstagram__c</fullName>
    <label>Instagram Followers</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>