force-app/main/default/objects/Lead/fields/SeguidoresInstagramAuxiliar__c.field-meta.xml
<CustomField>
    <fullName>SeguidoresInstagramAuxiliar__c</fullName>
    <formula>IF (SeguidoresInstagram__c  &gt;=0 &amp;&amp; SeguidoresInstagram__c  &lt;=100000, 0,
IF (SeguidoresInstagram__c  &gt;= 100000 &amp;&amp; SeguidoresInstagram__c  &lt;=500000, 1,
IF (SeguidoresInstagram__c  &gt;500000 , 3, 0
)
)
)</formula>
    <label>Seguidores Instagram (auxiliar)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>