force-app/main/default/objects/Lead/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Billing State</label>
    <type>TextArea</type>
</CustomField>